--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
     <body bgcolor="#0a192f">
         <div id="navbar">
         <div class="header">
-            <a class="nav1"><span class="no">01.</span> About</a>
+            <a class="nav1" href="#about-me"><span class="no">01.</span> About</a>
             <a class="nav1"><span class="no">02.</span> Experience</a>
             <a class="nav1"><span class="no">03.</span> Work</a>
             <a class="nav1"><span class="no">04.</span> Contact</a>
             <a class="ef"><button class="resume">Resume</button></a></div></div>
         <div class="main">
+            <section style="height: 831px;" >
             <div classs="intro">
                 <div class="no1">Hi, my name is</div>
                 <div class="large">Srinivasa Narayanan.</div>
@@ -26,7 +27,16 @@
             <div>
                 <p class="intro-text">I'm a computer engineer with a background in training ML and DL models. Currently, I am pursuing my 2nd year Computer Science degree at <a class="ht" href="https://chennai.vit.ac.in/" target="_blank">VIT Chennai</a>. </p>
             </div>
-            <a><div style="margin-top: 40px;" class="ef"><button class="resume" style="padding: 18px 17px;">Hi!, please press this</button></div></a>
+            <a><div style="margin-top: 50px;" class="ef"><button class="resume" style="padding: 18px 17px;">Hi!, please press this</button></div></a>
+            </section>
+            <section style="margin: 120px 0;" id="about-me" class="section1">
+                <h2 class="title"><span class="serial">01. </span>
+                <span class="sub">About Me</span></h2>
+            </section>
+            <section style="margin:780px 0;" class="section1">
+                <h2 class="title"><span class="serial">02. </span>
+                <span class="sub">Experience</span></h2>
+            </section>
         </div>
         <div class="contact-link" >
         <ul class="links">
