--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a class="nav1"><span class="no">04.</span> Contact</a>
             <a class="ef"><button class="resume">Resume</button></a></div></div>
         <div class="main">
-            <section style="height: 831px;" >
+            <section style="height: 600px;" >
             <div classs="intro">
                 <div class="no1">Hi, my name is</div>
                 <div class="large">Srinivasa Narayanan.</div>
@@ -29,9 +29,21 @@
             </div>
             <a><div style="margin-top: 50px;" class="ef"><button class="resume" style="padding: 18px 17px;">Hi!, please press this</button></div></a>
             </section>
-            <section style="margin: 120px 0;" id="about-me" class="section1">
+            <section style="margin: 100px 0; padding-top: 15px;" id="about-me" class="section1">
                 <h2 class="title"><span class="serial">01. </span>
                 <span class="sub">About Me</span></h2>
+                <div class="prof"><div class="text">
+                <p>Hello there! I'm a passionate computer science student currently in my second year at VIT Chennai. My journey into the world of technology began in my first semester when I delved into the fascinating realm of web development. Since then, I've been on an exciting learning curve, exploring the intricacies of coding and design.</p>
+                <p> As I progress through my academic journey, my interests have expanded to encompass the cutting-edge field of deep learning. Currently, I am engaged in the development and refinement of deep learning models. </p>
+                <p>Here are few technologies I have been working with recently:</p>
+                <ul class="skills-list"><li>JavaScript</li>
+                <li>React</li>
+                <li>Tensorflow</li>
+                <li>Sci-kit Learn</li>
+                <li>reinforcement learning</li>
+                <li>ANNs</li></ul>
+            </div><div class="container"><div class="photo">
+        <img src="pic.jpg" class="me"></div><div class="bor"></div></div>
             </section>
             <section style="margin:780px 0;" class="section1">
                 <h2 class="title"><span class="serial">02. </span>
